2004-03-20  Dave Beckett  <Dave.Beckett@bristol.ac.uk>

	* configure.in: Move the PNG_CFLAGS/_LIBS substitutes outside
	the conditional, to match what is already done for XCB.
	Do the same for XRENDER_CFLAGS/LIBS.

	* configure.in: Substitute PNG_CFLAGS, PNG_LIBS on
	the configure path when use_png is not enabled to prevent
	the substituions being undefined.

2004-03-19  Graydon Hoare  <graydon@redhat.com>

	* src/cairo.c (cairo_init_clip): Add.
	* src/cairo_gstate.c:
	Initialize, finalize and copy clip.region.
	Detect rectangular clips and push down to backend.

	* src/cairoint.h
	(cairo_surface_backend_t): Add set_clip_region slot.
	(cairo_clip_rec_t): Add region slot.
	(_cairo_gstate_init_clip)
	(_cairo_surface_set_clip_region): Prototype.

	* src/cairo_surface.c
	(_cairo_surface_set_clip_region): Add.
	
	* src/cairo_xlib_surface.c 
	(_cairo_xlib_surface_set_clip_region): Add.

	* src/cairo_image_surface.c 
	(_cairo_image_surface_set_clip_region): Add.

	* src/cairo_ps_surface.c
	(_cairo_ps_surface_set_clip_region): Stub, not implemented.

2004-03-16  Jamey Sharp <jamey@minilop.net>

	* src/cairo.h:
	* src/cairo_xcb_surface.c:
	Updated for XCB typename renaming. The Xlib and XCB surfaces can
	be compiled in the same library now.

	* src/cairo_surface.c:
	Initialize the surface's filter value.

2004-02-26  Carl Worth  <cworth@isi.edu>

	* AUTHORS: Add Jordi and Olivier to the AUTHORS file.

	* src/cairo_ft_font.c (_utf8_to_ucs4): Fix broken return value for
	nchars (thanks to Jordi Mas <jordi@ximian.com>).

2004-02-24  Olivier Andrieu  <oliv__a@users.sourceforge.net>

	* src/cairo.h:
	* src/cairo-features.h.in:
	* src/cairo_png_surface.c: Add PNG backend (cairo_set_target_png
	and cairo_png_surface_create).

	* cairo.pc.in:
	* configure.in: autoconf support for the PNG backend. Bump version
	to 0.1.19.
	
	* src/Makefile.am: PNG backend support, removed references to
	X_LIBS and X_CFLAGS.

2004-02-24  Carl Worth  <cworth@isi.edu>
