@@ -297,6 +297,16 @@ _cairo_png_surface_show_page (void *abstract_surface)
     return CAIRO_INT_STATUS_UNSUPPORTED;
 }
 
+static cairo_int_status_t
+_cairo_png_surface_set_clip_region (void *abstract_surface,
+				    pixman_region16_t *region)
+{
+    cairo_png_surface_t *surface = abstract_surface;
+
+    return _cairo_image_surface_set_clip_region (surface->image, region);
+}
+
+
 static const cairo_surface_backend_t cairo_png_surface_backend = {
     _cairo_png_surface_create_similar,
     _cairo_png_surface_destroy,
@@ -310,5 +320,6 @@ static const cairo_surface_backend_t cairo_png_surface_backend = {
     _cairo_png_surface_fill_rectangles,
     _cairo_png_surface_composite_trapezoids,
     _cairo_png_surface_copy_page,
-    _cairo_png_surface_show_page
+    _cairo_png_surface_show_page,
+    _cairo_png_surface_set_clip_region
 };
